{
    "name": "GameInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "13e529ce-cf38-40f7-8eac-e825a7a0f65c",
            "actions": [
                {
                    "name": "MoveOnGrid",
                    "type": "Button",
                    "id": "ef532438-e1ef-46a1-9eb4-764222931b05",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GameReset",
                    "type": "Button",
                    "id": "79670d1b-e48b-4dea-b9e2-f54ffd86bd55",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "72efe115-df68-4072-afa7-a7549dd32be7",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveOnGrid",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8067f195-7db4-4fae-9706-3c4b66f135e0",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GameReset",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "LevelEditor",
            "id": "630e420e-849c-474c-9f76-78d887330fe8",
            "actions": [
                {
                    "name": "PlaceOnGrid",
                    "type": "Button",
                    "id": "a2b1c085-1aab-4b51-af28-c48717e04fdd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RemoveFromGrid",
                    "type": "Button",
                    "id": "1f918389-0caa-481b-abc0-d66b7d04d6e6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "819214ae-abb9-4636-bf0b-fb38ce6c67e5",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RemoveFromGrid",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d8f50b7b-1ca8-43e5-b66e-b07ed1005c6c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaceOnGrid",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}